--- a/.github/workflows/auto-add-to-project.yml
+++ b/.github/workflows/auto-add-to-project.yml
@@ -1,15 +1,16 @@
-name: Auto Add Issues and Sync Pathways
+name: Auto Add and Sync Project Modules
 
 on:
-  issues:
-    types: [opened, reopened]
   push:
     branches:
       - main
+  issues:
+    types: [opened, reopened]
 
 permissions:
   issues: write
   projects: write
+  contents: read
 
 jobs:
   auto-add:
@@ -28,28 +29,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Detect updated pathways and create issues
+      - name: Install GitHub CLI
         run: |
-          echo "🔍 Checking for updated pathway folders..."
-          git fetch origin main --depth=2
-          
-          if git diff --name-only HEAD~1 HEAD | grep -q 'SwiftUI_Projects'; then
-            gh issue create \
-              --title "SwiftUI Pathway Update" \
-              --body "✅ New commits detected in **SwiftUI_Projects** — review your project progress tracker." \
-              --repo codemedic1424/Develop-in-Swift-2025 || true
-          fi
+          sudo apt-get update
+          sudo apt-get install -y gh
+          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
-          if git diff --name-only HEAD~1 HEAD | grep -q 'Swift'; then
-            gh issue create \
-              --title "Swift Language Pathway Update" \
-              --body "🦅 Updates found in **Swift Pathway** — sync your progress in the tracker." \
-              --repo codemedic1424/Develop-in-Swift-2025 || true
-          fi
-
-          if git diff --name-only HEAD~1 HEAD | grep -q 'Develop'; then
-            gh issue create \
-              --title "Develop in Swift Tutorials Update" \
-              --body "📘 New work detected in **Develop in Swift** tutorials — verify milestone completion." \
-              --repo codemedic1424/Develop-in-Swift-2025 || true
-          fi
+      - name: Create module issues if missing
+        run: |
+          echo "🧩 Checking and creating module issues if needed..."
+          for module in "Swift" "SwiftUI" "Develop in Swift"; do
+            if ! gh issue list --repo codemedic1424/Develop-in-Swift-2025 --search "$module" --state all --json title | grep -q "$module"; then
+              gh issue create \
+                --repo codemedic1424/Develop-in-Swift-2025 \
+                --title "$module Module Tracker" \
+                --body "Auto-created tracking issue for **$module** module progress." \
+                --label "Module"
+              echo "✅ Created issue for $module"
+            else
+              echo "ℹ️ Issue already exists for $module"
+            fi
+          done
