Update option name in issue template

--- a/.github/ISSUE_TEMPLATE/all_tutorials_progress.yml
+++ b/.github/ISSUE_TEMPLATE/all_tutorials_progress.yml
@@ -11,7 +11,7 @@ body:
       options:
         - "🦅 Swift Language Pathway"
         - "🌿 SwiftUI Pathway"
-        - "🧩 Develop in Swift Tutorials"
+        - "🧩 Develop in Swift"
         - "🧱 Guided Projects"
         - "🧪 Labs (Develop in Swift Fundamentals)"
         - "🏗️ Daily Motivation (Custom App)"
