--- a/.github/ISSUE_TEMPLATE/all_tutorials_progress.yml
+++ b/.github/ISSUE_TEMPLATE/all_tutorials_progress.yml
@@ -1,23 +1,29 @@
 name: All Tutorials Progress Tracker
 description: Track your progress across all Apple Swift learning pathways (Swift, SwiftUI, and Develop in Swift)
 labels: [progress, tracking]
+projects:
+  - "codemedic1424/Develop in Swift 2025 — Progress Tracker"
+
 
 body:
   - type: dropdown
-    id: pathway
-    attributes:
-      label: "📘 Pathway"
-      description: "Select the learning pathway this progress update belongs to."
-      options:
-        - "🦅 Swift Language Pathway"
-        - "🌿 SwiftUI Pathway"
-        - "🧩 Develop in Swift"
-        - "🧱 Guided Projects"
-        - "🧪 Labs (Develop in Swift Fundamentals)"
-        - "🏗️ Daily Motivation (Custom App)"
-        - "📚 General / Review"
-    validations:
-      required: true
+   id: pathway
+attributes:
+  label: "📘 Pathway"
+  description: "Select the learning pathway this progress update belongs to."
+  options:
+    - "🦅 Swift Language Pathway"
+    - "🌿 SwiftUI Pathway"
+    - "🧩 Develop in Swift Tutorials"
+    - "🧱 Guided Projects"
+    - "🧪 Labs (Develop in Swift Fundamentals)"
+    - "🏗️ Daily Motivation (Custom App)"
+    - "📚 General / Review"
+  # 👇 Add this line
+  project_field: "Pathway"
+validations:
+  required: true
+
 
   - type: markdown
     attributes:
